# ChallengesInterview

./: README.md  pyproject.toml
challengesinterview/challenge-basic/: bubble_sort.py  calculator.py  factorial.py  fibonacci.py  greatest_common_divisor.py  palindrome.py
challengesinterview/challenge-medium/: play_cards.ipynb  play_cards.py
challengesinterview/python/: lambda_functions.py
trainee/: GenerateImage.ipynb  encarte_data.json  encarte_data_12.json  encarte_data_4.json  encarte_data_6.json  encarte_data_9.json
