[project]
name = "challengesinterview"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Galli",email = "marcelolemesgalli@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
